--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -40,29 +40,30 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-    <script type="text/javascript">
-      (function (I, L, T, i, c, k, s) {
-        if (I.iticks) return;
-        I.iticks = { host: c, settings: s, clientId: k, cdn: L, queue: [] };
-        var h = T.head || T.documentElement;
-        var e = T.createElement(i);
-        var l = I.location;
-        e.async = true;
-        e.src = (L || c) + '/client/inject-v2.min.js';
-        h.insertBefore(e, h.firstChild);
-        I.iticks.call = function (a, b) {
-          I.iticks.queue.push([a, b]);
-        };
-      })(
-        window,
-        'https://cdn-v1.intelliticks.com/prod/common',
-        document,
-        'script',
-        'https://app.intelliticks.com',
-        'Myzz5rLENw5p9HncB_c',
-        {}
-      );
-    </script>
+    <script>(function(){var js,fs,d=document,id="tars-widget-script",b="https://tars-file-upload.s3.amazonaws.com/bulb/";if(!d.getElementById(id)){js=d.createElement("script");js.id=id;js.type="text/javascript";js.src=b+"js/widget.js";fs=d.getElementsByTagName("script")[0];fs.parentNode.insertBefore(js,fs)}})();window.tarsSettings = {"convid":"NnxFKt"};</script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
   </body>
 </html>
+<!-- <script type="text/javascript">
+  (function (I, L, T, i, c, k, s) {
+    if (I.iticks) return;
+    I.iticks = { host: c, settings: s, clientId: k, cdn: L, queue: [] };
+    var h = T.head || T.documentElement;
+    var e = T.createElement(i);
+    var l = I.location;
+    e.async = true;
+    e.src = (L || c) + '/client/inject-v2.min.js';
+    h.insertBefore(e, h.firstChild);
+    I.iticks.call = function (a, b) {
+      I.iticks.queue.push([a, b]);
+    };
+  })(
+    window,
+    'https://cdn-v1.intelliticks.com/prod/common',
+    document,
+    'script',
+    'https://app.intelliticks.com',
+    'Myzz5rLENw5p9HncB_c',
+    {}
+  );
+</script> -->
